remove buggy custom scrollbar

--- a/client/src/styles/base/base.scss
+++ b/client/src/styles/base/base.scss
@@ -72,6 +72,7 @@ img {
 // textarea,
 // select,
 button,
-a {
+a,
+.no-tab-highlight {
   -webkit-tap-highlight-color:  transparent;
 }
