--- a/client/src/styles/components/swiper/_swiper.scss
+++ b/client/src/styles/components/swiper/_swiper.scss
@@ -23,11 +23,6 @@
     }
   }
 
-  &.custom-scrolling {
-    pointer-events: none;
-    user-select: none;
-  }
-
   &__item {
     scroll-snap-align: start;
     transform: translateZ(0); // prevent repainting entire component
@@ -58,6 +53,31 @@
       }
     }
   }
+}
+
+.swiper:not(.hide-scrollbars) {
+  @mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white, 50%)) {
+    // For Google Chrome
+    &::-webkit-scrollbar {
+        width: $size;
+        height: $size;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: $foreground-color;
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 45%,rgba($foreground-color,1) 46%,rgba($foreground-color,1) 54%, rgba(0,0,0,0) 55%,rgba(0,0,0,0) 100%);
+    }
+
+    &::-webkit-scrollbar-track {
+        background: $background-color;
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 45%,rgba($background-color,1) 46%,rgba($background-color,1) 54%, rgba(0,0,0,0) 55%,rgba(0,0,0,0) 100%);
+    }
+    // For Internet Explorer
+    scrollbar-face-color: $foreground-color;
+    scrollbar-track-color: $background-color;
+  }
+
+  @include scrollbars(30px, $text-primary-color, $gray-light);
 }
 
 .swiper-wrapper {
